--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -5,7 +5,11 @@ sidebar:
   order: 4
 ---
 
-import ThemeImage from '../../../../components/ThemeImage.astro';
+import ThemedImage from '../../../../components/ThemedImage.astro';
+import brandingConfigLight from '../../../../assets/docs/product/branding/branding-config-light.png';
+import brandingConfigDark from '../../../../assets/docs/product/branding/branding-config-dark.png';
+import customerPortalLight from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-light.png';
+import customerPortalDark from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
 import {Aside} from '@astrojs/starlight/components';
 
 The white-labeling section of the Vendor Portal allows you to apply your own branding to the UI that customers use to deploy and manage your software.
@@ -25,17 +29,17 @@ A well-configured Customer Portal should provide all the information your end us
 
 Branding configuration view:
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/branding/branding-config-light.png"
-  darkSrc="/src/assets/docs/product/branding/branding-config-dark.png"
+<ThemedImage
+  lightSrc={brandingConfigLight}
+  darkSrc={brandingConfigDark}
   alt="Helm Agent interface"
 />
 
 After saving, the [Customer Portal](/docs/product/customer-portal/) is rebranded for your end users:
 
-<ThemeImage
-  lightSrc="/src/assets/docs/guides/customer-view/customer-portal-no-num-light.png"
-  darkSrc="/src/assets/docs/guides/customer-view/customer-portal-no-num-dark.png"
+<ThemedImage
+  lightSrc={customerPortalLight}
+  darkSrc={customerPortalDark}
   alt="Deployments interface"
 />
 
