--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -7,7 +7,13 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemeImage from '../../../../components/ThemeImage.astro';
+import ThemedImage from '../../../../components/ThemedImage.astro';
+import lightSlug from '../../../../assets/docs/product/registry/light-slug.png';
+import darkSlug from '../../../../assets/docs/product/registry/dark-slug.png';
+import dashboardArtifactViewLight from '../../../../assets/docs/product/registry/dashboard-artifact-view-light.png';
+import dashboardArtifactViewDark from '../../../../assets/docs/product/registry/dashboard-artifact-view-dark.png';
+import customerArtifactViewLight from '../../../../assets/docs/product/registry/customer-artifact-view-light.png';
+import customerArtifactViewDark from '../../../../assets/docs/product/registry/customer-artifact-view-dark.png';
 
 A quick guide to configuring and using the Distr Artifact Registry for secure, tag-based software distribution.
 
@@ -15,9 +21,9 @@ A quick guide to configuring and using the Distr Artifact Registry for secure, t
 
 Before you can push or pull artifacts, you must configure a registry slug at the organization level. This slug becomes part of your registry URL.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/light-slug.png"
-  darkSrc="/src/assets/docs/product/registry/dark-slug.png"
+<ThemedImage
+  lightSrc={lightSlug}
+  darkSrc={darkSlug}
   alt="Registry slug configuration"
 />
 
@@ -66,9 +72,9 @@ Replace slug with your configured registry slug, and 1.0.0 with your desired ver
 - Use the Downloads panel to view a chronological list of all downloaded artifacts, including which user downloaded them and from which IP address.
 - The registry only supports immutable tags, once pushed, a tag cannot be changed.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/dashboard-artifact-view-light.png"
-  darkSrc="/src/assets/docs/product/registry/dashboard-artifact-view-dark.png"
+<ThemedImage
+  lightSrc={dashboardArtifactViewLight}
+  darkSrc={dashboardArtifactViewDark}
   alt="Registry artifacts view"
 />
 
@@ -79,8 +85,8 @@ Replace slug with your configured registry slug, and 1.0.0 with your desired ver
 - Customers should authenticate with their own [PAT](/docs/integrations/personal-access-token/) and can only pull artifacts they are licensed for.
 - The [customer portal](/docs/guides/container-registry-for-end-customers/#registry-quickstart-from-the-customer-portal) provides a simplified view, the registry UI only shows the artifacts and versions that are accessible to the user.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/customer-artifact-view-light.png"
-  darkSrc="/src/assets/docs/product/registry/customer-artifact-view-dark.png"
+<ThemedImage
+  lightSrc={customerArtifactViewLight}
+  darkSrc={customerArtifactViewDark}
   alt="Registry artifacts view"
 />
