--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -6,7 +6,17 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemeImage from '../../../../components/ThemeImage.astro';
+import ThemedImage from '../../../../components/ThemedImage.astro';
+import lightModeRegistry from '../../../../assets/docs/product/registry/light-mode-registry.png';
+import darkModeRegistry from '../../../../assets/docs/product/registry/dark-mode-registry.png';
+import artifactsListLight from '../../../../assets/docs/product/registry/artifacts-list-light.png';
+import artifactsListDark from '../../../../assets/docs/product/registry/artifacts-list-dark.png';
+import artifactDetailsLight from '../../../../assets/docs/product/registry/artifact-details-light.png';
+import artifactDetailsDark from '../../../../assets/docs/product/registry/artifact-details-dark.png';
+import downloadLight from '../../../../assets/docs/product/registry/download-light.png';
+import downloadDark from '../../../../assets/docs/product/registry/download-dark.png';
+import dashboardArtifactViewLight from '../../../../assets/docs/product/registry/dashboard-artifact-view-light.png';
+import dashboardArtifactViewDark from '../../../../assets/docs/product/registry/dashboard-artifact-view-dark.png';
 
 The Distr Artifact Registry is a built-in, [OCI-compliant](https://github.com/opencontainers/distribution-spec?tab=readme-ov-file) registry designed for AI and software companies
 to distribute Docker images and Helm Charts, SBOMs and other OCI artifacts to self-managed and BYOC environments.
@@ -22,9 +32,9 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
   able to access your artifacts.
 </Aside>
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/light-mode-registry.png"
-  darkSrc="/src/assets/docs/product/registry/dark-mode-registry.png"
+<ThemedImage
+  lightSrc={lightModeRegistry}
+  darkSrc={darkModeRegistry}
   alt="Registry diagram"
 />
 
@@ -63,9 +73,9 @@ Want a quick overview of how it works? Watch this short walkthrough:
 
 The Artifact List page lets you view all artifacts stored in your registry. It provides an overview of pull counts across all tags, along with insights into which users and customers are using each artifact.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/artifacts-list-light.png"
-  darkSrc="/src/assets/docs/product/registry/artifacts-list-dark.png"
+<ThemedImage
+  lightSrc={artifactsListLight}
+  darkSrc={artifactsListDark}
   alt="Registry artifacts view"
 />
 
@@ -73,9 +83,9 @@ The Artifact List page lets you view all artifacts stored in your registry. It p
 
 The artifact details page gives you a complete view of all tags associated with a specific artifact. You can see the OCI URL, upload date, and artifact size, along with pull counts for each tag.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/artifact-details-light.png"
-  darkSrc="/src/assets/docs/product/registry/artifact-details-dark.png"
+<ThemedImage
+  lightSrc={artifactDetailsLight}
+  darkSrc={artifactDetailsDark}
   alt="Registry artifacts view"
 />
 
@@ -88,9 +98,9 @@ The artifact details page gives you a complete view of all tags associated with 
 
 The Downloads section shows a chronological list of all downloaded artifacts, including which user downloaded them and from which IP address.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/download-light.png"
-  darkSrc="/src/assets/docs/product/registry/download-dark.png"
+<ThemedImage
+  lightSrc={downloadLight}
+  darkSrc={downloadDark}
   alt="Registry artifacts view"
 />
 
@@ -98,8 +108,8 @@ The Downloads section shows a chronological list of all downloaded artifacts, in
 
 The main Distr dashboard also provides a global view of which artifacts each end customer has consumed, including version details and a health status.
 
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/dashboard-artifact-view-light.png"
-  darkSrc="/src/assets/docs/product/registry/dashboard-artifact-view-dark.png"
+<ThemedImage
+  lightSrc={dashboardArtifactViewLight}
+  darkSrc={dashboardArtifactViewDark}
   alt="Registry artifacts view"
 />
