--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -6,7 +6,9 @@ sidebar:
 ---
 
 import {Aside, Steps} from '@astrojs/starlight/components';
-import ThemeImage from '../../../../components/ThemeImage.astro';
+import ThemedImage from '../../../../components/ThemedImage.astro';
+import assistedSelfManagedLight from '../../../../assets/docs/use-cases/assisted-self-managed/assisted-self-managed-light.png';
+import assistedSelfManagedDark from '../../../../assets/docs/use-cases/assisted-self-managed/assisted-self-managed-dark.png';
 
 The Assisted Self-Managed deployment model offers a balance between customer infrastructure control and vendor assistance.
 Applications run in customer-owned environments such as virtual machines or Kubernetes clusters, with no direct vendor access to the infrastructure.
@@ -21,9 +23,9 @@ This is especially useful in setups where a platform team deploys the applicatio
 
 ### Solution Architecture
 
-<ThemeImage
-  lightSrc="/src/assets/docs/use-cases/assisted-self-managed/assisted-self-managed-light.png"
-  darkSrc="/src/assets/docs/use-cases/assisted-self-managed/assisted-self-managed-dark.png"
+<ThemedImage
+  lightSrc={assistedSelfManagedLight}
+  darkSrc={assistedSelfManagedDark}
   alt="Assisted-Self-Managed diagram"
 />
 
