--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -113,3 +113,23 @@ All Distr agents share a common set of core capabilities designed to ensure reli
   to alter a deployment, but just monitor the deployment status and report logs
   and metrics.
 </Aside>
+
+### Deployment Health
+
+The Deployments page shows status information on both deployment target and deployment level.
+
+The Distr agent, which is deployed once per deployment target, reconciles the state of the deployment target every 5 seconds,
+thereby also reporting the health of the deployment target and the contained deployments.
+
+A deployment target status can be:
+* Not connected: the dot to the left of the deployment target name is grey.
+* Connected: the dot is green.
+* Stale, i.e. the agent has been connected before, but did not report its health in the last 60 seconds: the dot is yellow. Only in this case,
+you have the option to Reconnect the agent by creating new credentials for the agent. Please note that this will invalidate the previous credentials.
+
+A deployment status can be:
+* No status: The agent did not report anything regarding this deployment yet.
+* Error: the dot is red.
+* Stale: The agent has not reported the deployments health in the last 60 seconds.
+* Progressing: The agent is currently installing or upgrading the deployment, due to your previous request.
+* OK: The deployment is healthy and running.
