--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -21,7 +21,7 @@ Perfect for organizations with strict data residency or compliance requirements 
 
 After connecting the end customers cloud account to Distr, the required infrastructure will be provisioned using the Terraform agent.
 In the next step the initial infrastructure will be set up, afterward the vendor application will get deployed.
-All further changes to the to applications or infrastructure will get applied by the Distr agents to ensure to all managed BYOC customers
+All further changes to the applications or infrastructure will get applied by the Distr agents to ensure to all managed BYOC customers
 are running the same version of the infrastructure and application.
 
 ## Solution Architecture
