--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -14,7 +14,7 @@ The Fully Self-Managed deployment model is designed for environments where third
 It is best suited for customers wanting to have full control over their infrastructure and don't want to use external agents.
 For this deployment model, Distr provides a [private artifact registry](/docs/product/registry/).
 It comes with an [optimized UI](/docs/product/registry/#artifact-registry-ui) that enables customers
-to create access tokens, fetch the latest images and build custom automations on top if the registry.
+to create access tokens, fetch the latest images and build custom automations on top of the registry.
 
 ## Solution Architecture
 
