chore: unifiy colors
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -113,7 +113,7 @@ thereby also reporting the health of the deployment target and the contained dep
 
 ### Deployment Target status list
 
-- ⚪ **Not connected**: the dot to the left of the deployment target name is grey.
+- ⚫ **Not connected**: the dot to the left of the deployment target name is grey.
 - 🟢 **Connected**: the dot is green.
 - 🟡 **Stale**, i.e. the agent has been connected before but did not report its health in the last 60 seconds:
   the dot is yellow.
