chore: regorganize headings, add links
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/license-mgmt.mdx
+++ b/src/content/docs/docs/guides/license-mgmt.mdx
@@ -56,7 +56,7 @@ The customer can now access and deploy the assigned application version/s direct
 
 ![license-form](../../../../assets/docs/guides/license-form.png)
 
-## OCI registry authentication:
+## OCI registry authentication
 
 If your images are stored in a private OCI registry, you'll need to provide access credentials. You can configure these credentials in the lower section of the license configuration panel. Once set, the application versions will be available at the deployment target for as long as the license is valid.
 
