--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -244,7 +244,7 @@ thereby also reporting the health of the deployment target and the contained dep
 All Distr agents share a common set of core capabilities designed to ensure reliable and secure deployments. These include guided installation processes, automated application updates, comprehensive health monitoring, log aggregation for troubleshooting, and secure, outbound-only communication with the Distr Hub.
 
 <Aside>
-  We are also working on a read-only version of the Distr agent that will not be able
-  to alter a deployment, but will just monitor the deployment status and report logs
-  and metrics.
+  We are also working on a read-only version of the Distr agent that will not be
+  able to alter a deployment, but will just monitor the deployment status and
+  report logs and metrics.
 </Aside>
