feat: add mcp server docs
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -93,27 +93,12 @@ When running the docker compose file you will be able to see following output fo
 
 <Tabs>
   <TabItem label="service one">
-    <Code
-      code={oneJson}
-      lang="json"
-      title="http://localhost:3001/env"
-      frame="terminal"
-    />
+    <Code code={oneJson} lang="json" title="http://localhost:3001/env" />
   </TabItem>
   <TabItem label="service two">
-    <Code
-      code={twoJson}
-      lang="json"
-      title="http://localhost:3002/env"
-      frame="terminal"
-    />
+    <Code code={twoJson} lang="json" title="http://localhost:3002/env" />
   </TabItem>
   <TabItem label="service three">
-    <Code
-      code={threeJson}
-      lang="json"
-      title="http://localhost:3003/env"
-      frame="terminal"
-    />
+    <Code code={threeJson} lang="json" title="http://localhost:3003/env" />
   </TabItem>
 </Tabs>
