docs: improve Distr MCP docs
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -4,6 +4,10 @@ description: Distr is an open source software distribution platform for software
 slug: docs/getting-started/what-is-distr
 sidebar:
   order: 1
+banner:
+  content: |
+    The <a href="/docs/integrations/mcp/">Distr MCP server</a> is now available as a remote MCP server and is hosted on <a href="https://hyprmcp.com/" target="_blank">https://hyprmcp.com</a>.
+tableOfContents: false
 ---
 
 import {Aside} from '@astrojs/starlight/components';
