--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -44,6 +44,6 @@ Best for teams with the highest compliancy needs:
 - Experience using Distr for self-managing your own Distr deployment
 
 <Aside type="note">
-  If you want to ty out Distr completely by yourself, check out our
+  If you want to try out Distr completely by yourself, check out our
   [Self-Hosting Guide](/docs/self-hosting/getting-started).
 </Aside>
