feat: fix typos
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/content/docs/docs/integrations/mcp.mdx
+++ b/src/content/docs/docs/integrations/mcp.mdx
@@ -45,7 +45,7 @@ Configure a [personal access token (PAT)](/docs/integrations/personal-access-tok
 
 **Header value:** `AccessToken distr-bc46...`
 
-Example configuration for Claude Code:
+Example configuration for Claude Code would look like:
 
 ```shell
 claude mcp add --transport http distr https://glasskube.hyprmcp.cloud/distr/mcp --header "Authorization: AccessToken distr-bc46..."
